# core

./: Dockerfile.backend  Dockerfile.backendnew  Dockerfile.coreslither  Dockerfile.coreslithernew  Dockerfile.coresmartian  Dockerfile.coresmartiannew  Dockerfile.corethril  Dockerfile.corethrilnew  DockerfileDev  README.md  a  dev.Dockerfile  requirementsDev.txt  sources.list
backend/: Dockerfile.backend  pyproject.toml  requirements.txt
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_auto_20220929_1003.py  0003_auto_20220929_1005.py
backend/api/migrations/sql/: 0001_20230105_1658.sql  0002_20230515_0958.sql
backend/api/tools/: contract_helper.py  deltaT.py  detect_item.py  detection_result.py  merge_contract.py  merge_import.py  pull_contract_pack.py  redis_conn.py  rsc_func.py  send_redis.py  sol_filter.py  verify_submit_status.py
backend/api/tools/multi_file_contract/: 01_04_RoundIdFetcher.sol  02_04_AggregatorV2V3Interface.sol
backend/backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/conf/: __init__.py  conf.json  detect_item.xlsx
backend/middleware/: request_middleware.py
backend/t/: config.py  make_sign.py
core2c/: Dockerfile  README.md  dev.Dockerfile  requirements.txt
core2c/api/: __init__.py  web.py
core2c/conf/: __init__.py  conf.json
core_slither/: coreslither.yml
coreslither/: coreslither.yml  requirements.txt
coresmartian/: coresmartian.yml  requirements.txt
corethril/: corethril.yml  requirements.txt
docs/: Directory.md  README_ZH.md  framework.md
(+42 files in other folders)
